# Dazi

./: .env.example  .gitignore  README.md  pyproject.toml
dazi/: __init__.py  __main__.py  _singletons.py  background.py  coordinator.py  dazimd.py  filesystem.py  lifecycle.py  mailbox.py  main.py  onboard.py  prompt_builder.py  repl_commands.py  repl_completer.py  repl_display.py  repl_teams.py  settings.py  skills.py  task_store.py  terminal.py  tools.py
dazi/core/: __init__.py  _singletons.py  background.py  base.py  compact.py  concurrent.py  config.py  coordinator.py  cost_tracker.py  dazimd.py  filesystem.py  hooks.py  llm.py  mailbox.py  mcp_client.py  memory.py  permission_bridge.py  permissions.py  proactive.py  prompt_builder.py  protocols.py  resilience.py  settings.py  skills.py  task_store.py  team.py  teammate.py  tokenizer.py  worktree.py
docs/: harness-engineering.md
tests/: conftest.py  test_background.py  test_coordinator.py  test_graph.py  test_lifecycle.py  test_mailbox.py  test_mcp_client.py  test_onboard.py  test_permission_bridge.py  test_repl_commands.py  test_repl_completer.py  test_repl_display.py  test_repl_teams.py  test_skills.py  test_task_store.py  test_team.py  test_terminal.py  test_worktree.py
tests/helpers/: mock_singletons.py
