[project]
name = "dazi"
version = "0.3.0"
description = "A coding assistant powered by LLM agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.27.0",
]

[project.scripts]
dazi = "dazi.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:langchain",
    "ignore::DeprecationWarning:langgraph",
]

[tool.coverage.run]
source = ["dazi"]
omit = ["dazi/__main__.py", "dazi/main.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "PTH", "RUF"]
ignore = []
